Bug 1017939 - newly created maildir subfolders are created under INBOX instead of INBOX.sbd, r=irving, a=ryanvm